# portfolio-analytics-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260215_0001_create_trades.py  20260215_0002_create_core_ledger_tables.py
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: ai.py  companies.py  portfolio.py  prices.py  trades.py
backend/app/market_data/: base.py  factory.py
backend/app/market_data/providers/: demo.py  yfinance_provider.py
backend/app/services/: ai.py  analytics.py  companies.py  portfolio.py  pricing.py
backend/portfolio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_ai_endpoint.py  test_analytics_endpoint.py  test_companies_compare.py  test_company_search.py  test_portfolio_endpoints.py  test_price_refresh.py  test_schema.py  test_trade_import.py
docs/: deployment-guide.md  spec.md  user-guide.md
docs/adr/: 0001-architecture.md
docs/data-contracts/: trade-import.md
frontend/: README.md  index.html
infra/terraform/: README.md
sample-data/: README.md  trade_import_template.csv  trades_bad_rows.csv  trades_incremental.csv  trades_seed.csv  trades_seed.xlsx
scripts/: bootstrap.sh
